@@ -140,7 +140,7 @@ angular.module('overview', ['stats', 'checks', 'ngSanitize'])
 
     $scope.dismissCheckByNode = function(node, check) {
       var stmt = 'UPDATE sys.node_checks SET acknowledged = TRUE WHERE node_id = ? AND id = ?';
-      SQLQuery.execute(stmt, [node.id, check.id])
+      SQLQuery.execute(stmt, [node.id, check.id], false, false, false)
         .success(function() {
           removeFromArray(check.nodes, node);
           if (check.nodes.length === 0) {
@@ -154,7 +154,7 @@ angular.module('overview', ['stats', 'checks', 'ngSanitize'])
 
     $scope.dismissCheck = function(check) {
       var stmt = 'UPDATE sys.node_checks SET acknowledged = TRUE WHERE id = ?';
-      SQLQuery.execute(stmt, [check.id])
+      SQLQuery.execute(stmt, [check.id], false, false, false)
         .success(function() {
           removeCheck(check);
         });
