@@ -16,7 +16,7 @@ angular.module('checks', ['sql'])
       var deferred = $q.defer(),
         promise = deferred.promise;
 
-      SQLQuery.execute(stmt)
+      SQLQuery.execute(stmt, {}, false, false, false)
         .success(function(query) {
           var result = queryResultToObjects(query, cols);
           deferred.resolve(result);
@@ -47,7 +47,7 @@ angular.module('checks', ['sql'])
       var deferred = $q.defer(),
         promise = deferred.promise;
 
-      SQLQuery.execute(stmt)
+      SQLQuery.execute(stmt, {}, false, false, false)
         .success(function(query) {
           var result = queryResultToObjects(query, cols);
           var checks = {};
