@@ -537,3 +537,57 @@ label:hover:before {
 .query-status--error{
   color: @query-status--error-color;
 }
+
+.unauthorized{
+  position: fixed; 
+  width: 100%; 
+  height: 100%; 
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2e2e2e;
+  color: #c7c7c7; 
+  z-index: 2; 
+  cursor: pointer; 
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.unauthorized-wrapper {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 5% 10% 5% 10%;
+}
+.unauthorized-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  width: 50%;
+  margin-bottom: 20px;
+}
+
+.unauthorized-header__icon {
+  max-height: 25px;
+}
+.unauthorized-body {
+  border: 1px solid #3b3b3b;
+  background-color: #333333;
+  height: 500px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.unauthorized-body__img {
+  width: 50%;
+}
